# tomuroboxmidi

./: .gitignore  Makefile  README.md  SPEC.md  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
tests/: annie_laurie.mid  daisy_bell.mid  test_converter.py
tests/snapshots/: annie_laurie_n20.txt  annie_laurie_n40.txt  daisy_bell_n20.txt  daisy_bell_n40.txt
tomuroboxmidi/: converter.py  main.py  models.py
