[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomuroboxmidi"
version = "0.1.0"
description = "MIDIファイルをMuro Box向け形式に変換するCLIツール"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mido>=1.3.3",
]

[project.scripts]
tomuroboxmidi = "tomuroboxmidi.main:main"

[dependency-groups]
build = ["pyinstaller>=6"]
